# firecrawl

./: .env  .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  PLAN.md  README.md  SBOM-SUMMARY.md  SELF_HOST.md  SELF_HOSTED_STORAGE.md  SELF_HOST_CN.md  SUCCESSFUL_TESTS_SUMMARY.md  WEBSITES_WITH_DATA_ATTRIBUTES.md  docker-compose copy.yaml  docker-compose-dev-override.yaml  docker-compose.yaml  dockerbuild.txt  enable-robots-txt-respect.sql  et --soft eddf305c  flake.nix  package-lock.json  portainer-stack.yml  render.yaml  stack.env  test-robots-txt-respect.js
.github/: CODEOWNERS  dependabot.yml
api/: .dockerignore  __.env.local  fly.toml  pnpm-lock.yaml
apps/api/native/: .editorconfig  .gitattributes  .gitignore  .prettierignore  .taplo.toml  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/native/__test__/: extract-links.spec.ts  extract-metadata.spec.ts  html-to-markdown.spec.ts  transform-html.spec.ts  tsconfig.json
apps/api/native/benchmark/: bench.ts  tsconfig.json
apps/api/native/src/: lib.rs
apps/python-sdk/: .env.example  .pylintrc  README.md  build_and_publish.sh  example.py  example_aio.py  example_async.py  example_images.py  example_v1.py  example_v2.py  example_ws.py  examplev0.py  firecrawl-python-sdk-sbom.json  pyproject.toml  requirements.txt  setup.py  test_custom_date_range.py  test_deep_research.py  test_fix_verification.py
apps/python-sdk/examples/: async_batch_scrape_urls_example.py  async_crawl_url_example.py  async_extract_example.py  batch_scrape_urls_and_watch_example.py  batch_scrape_urls_example.py  cancel_crawl_example.py  check_batch_scrape_errors_example.py  check_batch_scrape_status_example.py  check_crawl_errors_example.py  check_crawl_status_example.py  crawl_url_and_watch_example.py  crawl_url_example.py  extract_example.py  get_extract_status_example.py  map_url_example.py  scrape_url_example.py  search_example.py
apps/python-sdk/firecrawl/: DELETE_firecrawl.py  TODO.md  __init__.py  client.py  firecrawl.backup.py  firecrawl.py  types.py  utils.py
apps/python-sdk/firecrawl/__tests__/DELETE_e2e_withAuth/: test.py
apps/python-sdk/firecrawl/__tests__/DELETE_v1/e2e_withAuth/: test.py
apps/python-sdk/firecrawl/__tests__/e2e/v2/: .env.example  conftest.py  test_async.py  test_batch_scrape.py  test_crawl.py  test_extract.py  test_map.py  test_scrape.py  test_search.py  test_usage.py  test_watcher.py
apps/python-sdk/firecrawl/__tests__/e2e/v2/aio/: test_aio_batch_scrape.py  test_aio_crawl.py  test_aio_extract.py  test_aio_map.py  test_aio_scrape.py  test_aio_search.py  test_aio_usage.py  test_aio_watcher.py
apps/python-sdk/firecrawl/__tests__/e2e_withAuth/: .env.example  test.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/: test_batch_request_preparation.py  test_crawl_params.py  test_crawl_request_preparation.py  test_crawl_validation.py  test_map_request_preparation.py  test_search_request_preparation.py  test_search_validation.py  test_usage_types.py  test_webhook.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/aio/: test_aio_crawl_params.py  test_aio_crawl_request_preparation.py  test_aio_crawl_validation.py  test_aio_map_request_preparation.py  test_aio_scrape_request_preparation.py  test_aio_search_request_preparation.py  test_batch_request_preparation_async.py  test_ensure_async.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/crawl/: test_crawl_params.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/map/: test_map_request_preparation.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/scrape/: test_scrape_request_preparation.py
apps/python-sdk/firecrawl/__tests__/unit/v2/methods/search/: test_search_request_preparation.py
apps/python-sdk/firecrawl/__tests__/unit/v2/utils/: test_validation.py
apps/python-sdk/firecrawl/__tests__/unit/v2/watcher/: test_ws_watcher.py
apps/python-sdk/firecrawl/__tests__/v1/e2e_withAuth/: test.py
apps/python-sdk/firecrawl/v1/: __init__.py  client.py
apps/python-sdk/firecrawl/v2/: __init__.py  client.py  client_async.py  types.py  watcher.py  watcher_async.py
apps/python-sdk/firecrawl/v2/methods/: batch.py  crawl.py  extract.py  map.py  scrape.py  search.py  usage.py
apps/python-sdk/firecrawl/v2/methods/aio/: __init__.py  batch.py  crawl.py  extract.py  map.py  scrape.py  search.py  usage.py
apps/python-sdk/firecrawl/v2/utils/: __init__.py  error_handler.py  get_version.py  http_client.py  http_client_async.py  normalize.py  validation.py
apps/python-sdk/firecrawl_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/python-sdk/scripts/: generate_examples.py
apps/python-sdk/tests/: test_async_firecrawl.py  test_async_search_return_type.py  test_change_tracking.py  test_max_age_validation.py  test_timeout_conversion.py
apps/python-sdk/tests/e2e/: test_async_batch_scrape.py  test_async_crawl.py  test_batch_scrape.py  test_check_crawl_status.py  test_crawl.py  test_deep_research.py  test_extract.py  test_generate_llms_text.py  test_map.py  test_scrape.py
apps/python-sdk/tests/e2e/async/: test_a_extract.py  test_a_map.py  test_async_batch_scrape.py  test_async_crawl.py  test_batch_scrape.py  test_check_crawl_status.py  test_crawl.py  test_deep_research.py  test_extract.py  test_generate_llms_text.py  test_map.py  test_scrape.py
apps/rust-sdk/: CHANGELOG.md  Cargo.toml  Makefile  README.md  firecrawl-rust-sdk-sbom.json
apps/rust-sdk/examples/: batch_scrape_example.rs  cancel_crawl_example.rs  check_crawl_errors_example.rs  example.rs  extract_example.rs  llmstxt_example.rs  search_example.rs
apps/rust-sdk/src/: batch_scrape.rs  crawl.rs  document.rs  error.rs  extract.rs  lib.rs  llmstxt.rs  map.rs  scrape.rs  search.rs
apps/rust-sdk/tests/: .env.example  e2e_with_auth.rs
docs/: fire-1-agent.md  robots-txt-respect-for-scrapes.md
examples/: attributes-extraction-js-sdk.js  attributes-extraction-python-sdk.py  coder_example#  rag-llama3.mdx  test.py  web-data-extraction-using-llms.mdx
helm/: Chart.yaml  (+2 more)
(+1103 files in other folders)
