[package]
name = "firecrawl_rs"
author="Mendable.ai"
version = "0.1.0"
edition = "2021"
license = "AGPL License"
homepage = "https://www.firecrawl.dev/"
repository ="https://github.com/mendableai/firecrawl"
description = "Rust SDK for Firecrawl API."
authors = ["sanix-darker <sanixdk@gmail.com>"]

[lib]
path = "src/lib.rs"
name = "firecrawl_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "^0.12", features = ["json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
thiserror = "^1.0"
uuid = { version = "^1.10", features = ["v4"] }

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
assert_matches = "^1.5"
dotenv = "^0.15"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
