
[package]
authors = ["mogery <mogery@sideguide.dev>"]
edition = "2024"
name = "firecrawl_api_native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"

libc = "0.2.0"
lol_html = "2.2.0"
kuchikiki = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
nodesig = { git = "https://github.com/mendableai/nodesig" }
htmd = "0.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
